--- a/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="BYZ-38-t0r">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1eu-q5-hKE">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
@@ -8,7 +8,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--Audio Recording View Controller-->
+        <!--Pitch Perfect-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="AudioRecordingViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
@@ -17,7 +17,7 @@
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="eaP-XS-G2Z">
-                                <rect key="frame" x="0.0" y="301" width="414" height="255.5"/>
+                                <rect key="frame" x="0.0" y="323" width="414" height="255.5"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d0K-xY-U8a">
                                         <rect key="frame" x="129.5" y="0.0" width="155" height="155"/>
@@ -64,20 +64,164 @@
                         </constraints>
                     </view>
                     <toolbarItems/>
+                    <navigationItem key="navigationItem" title="Pitch Perfect" id="uhh-6g-Ma6">
+                        <barButtonItem key="backBarButtonItem" title="Back" id="iwt-y7-Q7l"/>
+                    </navigationItem>
                     <simulatedToolbarMetrics key="simulatedBottomBarMetrics"/>
                     <connections>
                         <outlet property="recordButton" destination="d0K-xY-U8a" id="UYl-5Z-OCA"/>
                         <outlet property="statusLabel" destination="RD6-1c-Q6v" id="TsX-Dn-acl"/>
                         <outlet property="stopButton" destination="fIm-Az-ucz" id="uvO-Ye-y0M"/>
+                        <segue destination="nub-8W-3se" kind="show" identifier="toPlaybackScreen" id="0wm-EV-9Rw"/>
                     </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="139" y="138"/>
+            <point key="canvasLocation" x="1026" y="138"/>
+        </scene>
+        <!--Pitch Perfect-->
+        <scene sceneID="hd9-fj-jcd">
+            <objects>
+                <viewController id="nub-8W-3se" customClass="AudioPlaybackViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
+                    <view key="view" contentMode="scaleToFill" id="eL5-7K-IBU">
+                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
+                        <subviews>
+                            <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="fTA-lT-aKu">
+                                <rect key="frame" x="0.0" y="88" width="414" height="525"/>
+                                <subviews>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="pXc-go-wDg">
+                                        <rect key="frame" x="0.0" y="0.0" width="414" height="175"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BRY-Si-tzb" userLabel="Play Slow Button">
+                                                <rect key="frame" x="0.0" y="85" width="207" height="90"/>
+                                                <state key="normal" image="Slow"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qon-LB-cc9" userLabel="Play Fast Button">
+                                                <rect key="frame" x="207" y="85" width="207" height="90"/>
+                                                <state key="normal" image="Fast"/>
+                                            </button>
+                                        </subviews>
+                                        <variation key="heightClass=compact-widthClass=regular" axis="vertical"/>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="H1a-Lr-J38">
+                                        <rect key="frame" x="0.0" y="175" width="414" height="175"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CW9-Xz-gJK" userLabel="High Pitch Button">
+                                                <rect key="frame" x="0.0" y="42.5" width="207" height="90"/>
+                                                <state key="normal" image="HighPitch"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JRC-Fm-sWK" userLabel="Low Pitch Button">
+                                                <rect key="frame" x="207" y="42.5" width="207" height="90"/>
+                                                <state key="normal" image="LowPitch"/>
+                                            </button>
+                                        </subviews>
+                                        <variation key="heightClass=compact-widthClass=regular" axis="vertical"/>
+                                    </stackView>
+                                    <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="BUm-vZ-fq4">
+                                        <rect key="frame" x="0.0" y="350" width="414" height="175"/>
+                                        <subviews>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ige-eX-Oq1" userLabel="Play Echo Button">
+                                                <rect key="frame" x="0.0" y="0.0" width="207" height="90"/>
+                                                <state key="normal" image="Echo"/>
+                                            </button>
+                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Me0-g0-tUh" userLabel="Play Reverb Button">
+                                                <rect key="frame" x="207" y="0.0" width="207" height="90"/>
+                                                <state key="normal" image="Reverb"/>
+                                            </button>
+                                        </subviews>
+                                        <variation key="heightClass=compact-widthClass=regular" axis="vertical"/>
+                                    </stackView>
+                                </subviews>
+                                <variation key="heightClass=compact-widthClass=regular" axis="horizontal" distribution="fillEqually"/>
+                            </stackView>
+                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YzK-3K-gvV" userLabel="Stop Playing Button">
+                                <rect key="frame" x="157" y="613" width="100" height="100"/>
+                                <constraints>
+                                    <constraint firstAttribute="width" constant="100" id="iuZ-EN-sLL">
+                                        <variation key="heightClass=compact-widthClass=regular" constant="200"/>
+                                    </constraint>
+                                    <constraint firstAttribute="height" constant="100" id="o8x-bH-oig">
+                                        <variation key="heightClass=compact-widthClass=regular" constant="200"/>
+                                    </constraint>
+                                </constraints>
+                                <state key="normal" image="Stop"/>
+                            </button>
+                        </subviews>
+                        <viewLayoutGuide key="safeArea" id="aF3-Gv-aRg"/>
+                        <color key="backgroundColor" systemColor="systemBackgroundColor"/>
+                        <constraints>
+                            <constraint firstItem="fTA-lT-aKu" firstAttribute="trailing" secondItem="YzK-3K-gvV" secondAttribute="leading" id="6hM-lI-uyu"/>
+                            <constraint firstItem="YzK-3K-gvV" firstAttribute="bottom" secondItem="fTA-lT-aKu" secondAttribute="bottom" constant="100" id="88j-t2-BTo"/>
+                            <constraint firstItem="fTA-lT-aKu" firstAttribute="top" secondItem="aF3-Gv-aRg" secondAttribute="top" id="8d8-pc-gHa"/>
+                            <constraint firstItem="aF3-Gv-aRg" firstAttribute="bottom" secondItem="fTA-lT-aKu" secondAttribute="bottom" id="BXd-CA-Cmv"/>
+                            <constraint firstItem="YzK-3K-gvV" firstAttribute="bottom" secondItem="aF3-Gv-aRg" secondAttribute="bottom" constant="-100" id="NdE-jU-WWD"/>
+                            <constraint firstItem="aF3-Gv-aRg" firstAttribute="trailing" secondItem="fTA-lT-aKu" secondAttribute="trailing" id="TXk-5I-VqV"/>
+                            <constraint firstItem="fTA-lT-aKu" firstAttribute="top" secondItem="aF3-Gv-aRg" secondAttribute="top" id="ZOC-d5-L22"/>
+                            <constraint firstItem="YzK-3K-gvV" firstAttribute="centerY" secondItem="aF3-Gv-aRg" secondAttribute="centerY" id="aN9-es-F7p"/>
+                            <constraint firstItem="aF3-Gv-aRg" firstAttribute="trailing" secondItem="YzK-3K-gvV" secondAttribute="trailing" constant="50" id="b66-ew-Bpp"/>
+                            <constraint firstItem="fTA-lT-aKu" firstAttribute="leading" secondItem="aF3-Gv-aRg" secondAttribute="leading" constant="50" id="bUV-qR-MOI"/>
+                            <constraint firstItem="aF3-Gv-aRg" firstAttribute="leading" secondItem="fTA-lT-aKu" secondAttribute="leading" id="hdl-sM-DJk"/>
+                            <constraint firstItem="YzK-3K-gvV" firstAttribute="centerX" secondItem="aF3-Gv-aRg" secondAttribute="centerX" id="yek-oU-qXr"/>
+                        </constraints>
+                        <variation key="default">
+                            <mask key="constraints">
+                                <exclude reference="BXd-CA-Cmv"/>
+                                <exclude reference="b66-ew-Bpp"/>
+                                <exclude reference="6hM-lI-uyu"/>
+                                <exclude reference="bUV-qR-MOI"/>
+                                <exclude reference="aN9-es-F7p"/>
+                            </mask>
+                        </variation>
+                        <variation key="heightClass=compact-widthClass=regular">
+                            <mask key="constraints">
+                                <include reference="BXd-CA-Cmv"/>
+                                <exclude reference="TXk-5I-VqV"/>
+                                <include reference="b66-ew-Bpp"/>
+                                <exclude reference="hdl-sM-DJk"/>
+                                <include reference="6hM-lI-uyu"/>
+                                <exclude reference="8d8-pc-gHa"/>
+                                <include reference="bUV-qR-MOI"/>
+                                <exclude reference="88j-t2-BTo"/>
+                                <exclude reference="NdE-jU-WWD"/>
+                                <include reference="aN9-es-F7p"/>
+                                <exclude reference="yek-oU-qXr"/>
+                            </mask>
+                        </variation>
+                    </view>
+                    <navigationItem key="navigationItem" title="Pitch Perfect" id="zk1-Hx-Sxe"/>
+                </viewController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="SZg-i5-XFT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="1941" y="138"/>
+        </scene>
+        <!--Navigation Controller-->
+        <scene sceneID="U04-WA-8eK">
+            <objects>
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1eu-q5-hKE" sceneMemberID="viewController">
+                    <toolbarItems/>
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" id="NXG-se-vtD">
+                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <autoresizingMask key="autoresizingMask"/>
+                    </navigationBar>
+                    <nil name="viewControllers"/>
+                    <connections>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="4YQ-b2-ai7"/>
+                    </connections>
+                </navigationController>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="T3y-3P-o7I" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
+            </objects>
+            <point key="canvasLocation" x="137.68115942028987" y="137.94642857142856"/>
         </scene>
     </scenes>
     <resources>
+        <image name="Echo" width="90" height="90"/>
+        <image name="Fast" width="90" height="90"/>
+        <image name="HighPitch" width="90" height="90"/>
+        <image name="LowPitch" width="90" height="90"/>
         <image name="Record" width="155" height="155"/>
+        <image name="Reverb" width="90" height="90"/>
+        <image name="Slow" width="90" height="90"/>
         <image name="Stop" width="155" height="155"/>
         <systemColor name="systemBackgroundColor">
             <color white="1" alpha="1" colorSpace="custom" customColorSpace="genericGamma22GrayColorSpace"/>
