--- a/PitchPerfect/Base.lproj/Main.storyboard
+++ b/PitchPerfect/Base.lproj/Main.storyboard
@@ -1,6 +1,6 @@
 <?xml version="1.0" encoding="UTF-8"?>
 <document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="17506" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="1eu-q5-hKE">
-    <device id="retina6_1" orientation="portrait" appearance="light"/>
+    <device id="retina4_7" orientation="landscape" appearance="light"/>
     <dependencies>
         <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="17505"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
@@ -13,34 +13,34 @@
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="AudioRecordingViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="8bC-Xf-vdC">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="eaP-XS-G2Z">
-                                <rect key="frame" x="0.0" y="323" width="414" height="255.5"/>
+                                <rect key="frame" x="0.0" y="60" width="667" height="255.5"/>
                                 <subviews>
                                     <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="d0K-xY-U8a">
-                                        <rect key="frame" x="129.5" y="0.0" width="155" height="155"/>
+                                        <rect key="frame" x="256" y="0.0" width="155" height="155"/>
                                         <state key="normal" image="Record"/>
                                         <connections>
                                             <action selector="onRecordButtonClicked" destination="BYZ-38-t0r" eventType="touchUpInside" id="dNa-hj-TyY"/>
                                         </connections>
                                     </button>
                                     <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Record" textAlignment="natural" lineBreakMode="tailTruncation" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="RD6-1c-Q6v">
-                                        <rect key="frame" x="180" y="155" width="54.5" height="20.5"/>
+                                        <rect key="frame" x="306.5" y="155" width="54.5" height="20.5"/>
                                         <fontDescription key="fontDescription" type="system" pointSize="17"/>
                                         <nil key="textColor"/>
                                         <nil key="highlightedColor"/>
                                     </label>
                                     <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="tJX-mN-JWh">
-                                        <rect key="frame" x="87" y="175.5" width="240" height="30"/>
+                                        <rect key="frame" x="213.5" y="175.5" width="240" height="30"/>
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="30" id="ag7-QN-vRz"/>
                                         </constraints>
                                     </view>
                                     <button opaque="NO" contentMode="scaleToFill" preservesSuperviewLayoutMargins="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="fIm-Az-ucz">
-                                        <rect key="frame" x="182" y="205.5" width="50" height="50"/>
+                                        <rect key="frame" x="308.5" y="205.5" width="50" height="50"/>
                                         <rect key="contentStretch" x="0.0" y="1" width="1" height="1"/>
                                         <constraints>
                                             <constraint firstAttribute="height" constant="50" id="bnf-8s-Hkb"/>
@@ -84,50 +84,68 @@
             <objects>
                 <viewController id="nub-8W-3se" customClass="AudioPlaybackViewController" customModule="PitchPerfect" customModuleProvider="target" sceneMemberID="viewController">
                     <view key="view" contentMode="scaleToFill" id="eL5-7K-IBU">
-                        <rect key="frame" x="0.0" y="0.0" width="414" height="896"/>
+                        <rect key="frame" x="0.0" y="0.0" width="667" height="375"/>
                         <autoresizingMask key="autoresizingMask" widthSizable="YES" heightSizable="YES"/>
                         <subviews>
                             <stackView opaque="NO" contentMode="scaleToFill" axis="vertical" distribution="fillEqually" translatesAutoresizingMaskIntoConstraints="NO" id="fTA-lT-aKu">
-                                <rect key="frame" x="0.0" y="88" width="414" height="525"/>
+                                <rect key="frame" x="0.0" y="32" width="667" height="111"/>
                                 <subviews>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="bottom" translatesAutoresizingMaskIntoConstraints="NO" id="pXc-go-wDg">
-                                        <rect key="frame" x="0.0" y="0.0" width="414" height="175"/>
+                                        <rect key="frame" x="0.0" y="0.0" width="667" height="37"/>
                                         <subviews>
                                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="BRY-Si-tzb" userLabel="Play Slow Button">
-                                                <rect key="frame" x="0.0" y="85" width="207" height="90"/>
+                                                <rect key="frame" x="0.0" y="0.0" width="333.5" height="37"/>
                                                 <state key="normal" image="Slow"/>
+                                                <connections>
+                                                    <action selector="onPlayButtonClicked:" destination="nub-8W-3se" eventType="touchUpInside" id="jvr-3K-kfG"/>
+                                                </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qon-LB-cc9" userLabel="Play Fast Button">
-                                                <rect key="frame" x="207" y="85" width="207" height="90"/>
+                                            <button opaque="NO" tag="1" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="qon-LB-cc9" userLabel="Play Fast Button">
+                                                <rect key="frame" x="333.5" y="0.0" width="333.5" height="37"/>
                                                 <state key="normal" image="Fast"/>
+                                                <connections>
+                                                    <action selector="onPlayButtonClicked:" destination="nub-8W-3se" eventType="touchUpInside" id="oZo-5R-Age"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <variation key="heightClass=compact-widthClass=regular" axis="vertical"/>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="center" translatesAutoresizingMaskIntoConstraints="NO" id="H1a-Lr-J38">
-                                        <rect key="frame" x="0.0" y="175" width="414" height="175"/>
+                                        <rect key="frame" x="0.0" y="37" width="667" height="37"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CW9-Xz-gJK" userLabel="High Pitch Button">
-                                                <rect key="frame" x="0.0" y="42.5" width="207" height="90"/>
+                                            <button opaque="NO" tag="2" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="CW9-Xz-gJK" userLabel="High Pitch Button">
+                                                <rect key="frame" x="0.0" y="0.0" width="333.5" height="37"/>
                                                 <state key="normal" image="HighPitch"/>
+                                                <connections>
+                                                    <action selector="onPlayButtonClicked:" destination="nub-8W-3se" eventType="touchUpInside" id="q20-OS-LtK"/>
+                                                </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JRC-Fm-sWK" userLabel="Low Pitch Button">
-                                                <rect key="frame" x="207" y="42.5" width="207" height="90"/>
+                                            <button opaque="NO" tag="3" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="JRC-Fm-sWK" userLabel="Low Pitch Button">
+                                                <rect key="frame" x="333.5" y="0.0" width="333.5" height="37"/>
                                                 <state key="normal" image="LowPitch"/>
+                                                <connections>
+                                                    <action selector="onPlayButtonClicked:" destination="nub-8W-3se" eventType="touchUpInside" id="uoD-kg-fkF"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <variation key="heightClass=compact-widthClass=regular" axis="vertical"/>
                                     </stackView>
                                     <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" alignment="top" translatesAutoresizingMaskIntoConstraints="NO" id="BUm-vZ-fq4">
-                                        <rect key="frame" x="0.0" y="350" width="414" height="175"/>
+                                        <rect key="frame" x="0.0" y="74" width="667" height="37"/>
                                         <subviews>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ige-eX-Oq1" userLabel="Play Echo Button">
-                                                <rect key="frame" x="0.0" y="0.0" width="207" height="90"/>
+                                            <button opaque="NO" tag="4" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Ige-eX-Oq1" userLabel="Play Echo Button">
+                                                <rect key="frame" x="0.0" y="0.0" width="333.5" height="37"/>
                                                 <state key="normal" image="Echo"/>
+                                                <connections>
+                                                    <action selector="onPlayButtonClicked:" destination="nub-8W-3se" eventType="touchUpInside" id="Xkj-jt-2e3"/>
+                                                </connections>
                                             </button>
-                                            <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Me0-g0-tUh" userLabel="Play Reverb Button">
-                                                <rect key="frame" x="207" y="0.0" width="207" height="90"/>
+                                            <button opaque="NO" tag="5" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="Me0-g0-tUh" userLabel="Play Reverb Button">
+                                                <rect key="frame" x="333.5" y="0.0" width="333.5" height="37"/>
                                                 <state key="normal" image="Reverb"/>
+                                                <connections>
+                                                    <action selector="onPlayButtonClicked:" destination="nub-8W-3se" eventType="touchUpInside" id="Mky-WY-9c6"/>
+                                                </connections>
                                             </button>
                                         </subviews>
                                         <variation key="heightClass=compact-widthClass=regular" axis="vertical"/>
@@ -136,7 +154,7 @@
                                 <variation key="heightClass=compact-widthClass=regular" axis="horizontal" distribution="fillEqually"/>
                             </stackView>
                             <button opaque="NO" contentMode="scaleToFill" contentHorizontalAlignment="center" contentVerticalAlignment="center" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="YzK-3K-gvV" userLabel="Stop Playing Button">
-                                <rect key="frame" x="157" y="613" width="100" height="100"/>
+                                <rect key="frame" x="283.5" y="143" width="100" height="100"/>
                                 <constraints>
                                     <constraint firstAttribute="width" constant="100" id="iuZ-EN-sLL">
                                         <variation key="heightClass=compact-widthClass=regular" constant="200"/>
@@ -146,6 +164,9 @@
                                     </constraint>
                                 </constraints>
                                 <state key="normal" image="Stop"/>
+                                <connections>
+                                    <action selector="onStopButtonClicked" destination="nub-8W-3se" eventType="touchUpInside" id="OVl-Yh-6As"/>
+                                </connections>
                             </button>
                         </subviews>
                         <viewLayoutGuide key="safeArea" id="aF3-Gv-aRg"/>
@@ -190,6 +211,9 @@
                         </variation>
                     </view>
                     <navigationItem key="navigationItem" title="Pitch Perfect" id="zk1-Hx-Sxe"/>
+                    <connections>
+                        <outlet property="stopButton" destination="YzK-3K-gvV" id="S5d-Aa-Rnq"/>
+                    </connections>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="SZg-i5-XFT" userLabel="First Responder" customClass="UIResponder" sceneMemberID="firstResponder"/>
             </objects>
@@ -201,7 +225,7 @@
                 <navigationController automaticallyAdjustsScrollViewInsets="NO" id="1eu-q5-hKE" sceneMemberID="viewController">
                     <toolbarItems/>
                     <navigationBar key="navigationBar" contentMode="scaleToFill" id="NXG-se-vtD">
-                        <rect key="frame" x="0.0" y="44" width="414" height="44"/>
+                        <rect key="frame" x="0.0" y="0.0" width="667" height="32"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
